Upgrade dependencies to prepare for 3.0.0 release

--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
         "csurf": "^1.11.0",
         "db.js": "^0.15.0",
         "debug": "^4.3.2",
-        "enketo-core": "git+https://github.com/eyelidlessness/enketo-core.git#node-16-dependency-upgrades",
-        "enketo-transformer": "git+https://github.com/eyelidlessness/enketo-transformer.git#node-16-dependency-upgrades",
+        "enketo-core": "6.0.0",
+        "enketo-transformer": "2.0.0",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
         "grunt": "^1.4.1",
@@ -56,10 +56,10 @@
         "grunt-i18next": "^0.2.0",
         "grunt-sass": "^3.1.0",
         "grunt-shell-spawn": "^0.4.0",
-        "i18next": "^20.6.0",
+        "i18next": "^20.6.1",
         "i18next-browser-languagedetector": "^6.1.2",
         "i18next-fs-backend": "^1.1.1",
-        "i18next-http-backend": "^1.3.0",
+        "i18next-http-backend": "^1.3.1",
         "i18next-http-middleware": "^3.1.4",
         "jquery": "^3.6.0",
         "jstransformer-markdown-it": "^2.1.0",
@@ -89,13 +89,13 @@
         "@types/db.js": "^0.14.7",
         "abortcontroller-polyfill": "^1.7.3",
         "bootstrap-datepicker": "1.9.0",
-        "chai-as-promised": "^7.1.1",
         "chai": "^4.3.4",
+        "chai-as-promised": "^7.1.1",
         "docdash": "^1.2.0",
+        "esbuild": "^0.12.28",
         "esbuild-plugin-alias": "^0.1.2",
-        "esbuild": "^0.12.25",
-        "eslint-plugin-jsdoc": "^36.0.8",
-        "eslint-plugin-unicorn": "^35.0.0",
+        "eslint-plugin-jsdoc": "^36.1.0",
+        "eslint-plugin-unicorn": "^36.0.0",
         "grunt-concurrent": "^3.0.0",
         "grunt-contrib-watch": "^1.1.0",
         "grunt-eslint": "^23.0.0",
@@ -105,7 +105,7 @@
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.1",
         "jsdoc": "^3.6.7",
-        "jsdoc-ts-utils": "^2.0.0",
+        "jsdoc-ts-utils": "^2.0.1",
         "karma": "^6.3.4",
         "karma-chrome-launcher": "^3.1.0",
         "karma-coverage": "^2.0.3",
