Testing enketo-webform.js: offline and online setup steps
Mocks Enketo application initialization steps to ensure:

- Regressions don't change or remove their behavior
- Their order is preserved

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,11 @@
 {
     "env": {
-        "es6": true,
+        "es2020": true,
         "browser": true,
         "commonjs": true
     },
     "globals": {
+        "ENV": true,
         "Promise": true
     },
     "extends": "eslint:recommended",
