--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
         "@types/express": "^4.17.13",
         "@types/sinon": "^10.0.6",
         "abortcontroller-polyfill": "^1.7.3",
+        "acorn": "^8.4.1",
+        "ast-types": "^0.14.2",
         "bootstrap-datepicker": "1.9.0",
         "chai": "^4.3.4",
         "chai-as-promised": "^7.1.1",
@@ -119,6 +121,9 @@
         "mocha": "^9.1.3",
         "nock": "^13.1.4",
         "node-sass": "^6.0.1",
+        "karma-source-map-support": "^1.4.0",
+        "object.fromentries": "^2.0.4",
+        "recast": "^0.20.5",
         "rimraf": "^3.0.2",
         "sinon": "^11.1.2",
         "sinon-chai": "^3.7.0",
