Restore Istanbul coverage in Karma
# Conflicts:
#	package-lock.json
#	package.json
#	test/client/config/karma.conf.js

# Conflicts:
#	test/build-tools/esbuild-plugin-export-private.js
#	test/client/config/karma.conf.js

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
         "docdash": "^1.2.0",
         "esbuild": "^0.12.29",
         "esbuild-plugin-alias": "^0.1.2",
+        "esbuild-plugin-pipe": "^0.2.0",
         "eslint-plugin-jsdoc": "^36.1.1",
         "eslint-plugin-unicorn": "^36.0.0",
         "grunt-concurrent": "^3.0.0",
@@ -106,6 +107,7 @@
         "grunt-sass": "^3.1.0",
         "grunt-simple-nyc": "^3.0.1",
         "istanbul": "^0.4.5",
+        "istanbul-lib-instrument": "^4.0.3",
         "istanbul-reporter-shield-badge": "^1.2.1",
         "jsdoc": "^3.6.7",
         "jsdoc-ts-utils": "^2.0.1",
