--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "3.0.4",
+    "version": "3.0.5",
     "main": "./app.js",
     "engines": {
         "node": ">=14 <17",
@@ -47,8 +47,8 @@
         "csurf": "^1.11.0",
         "db.js": "^0.15.0",
         "debug": "^4.3.3",
-        "enketo-core": "6.0.2",
-        "enketo-transformer": "2.1.1",
+        "enketo-core": "^6.0.4",
+        "enketo-transformer": "2.1.2",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.2",
         "grunt": "^1.4.1",
@@ -59,7 +59,7 @@
         "i18next-browser-languagedetector": "^6.1.3",
         "i18next-fs-backend": "^1.1.4",
         "i18next-http-backend": "^1.3.2",
-        "i18next-http-middleware": "^3.1.5",
+        "i18next-http-middleware": "^3.1.6",
         "jquery": "^3.6.0",
         "jstransformer-markdown-it": "^2.1.0",
         "jszip": "^3.7.1",
@@ -71,7 +71,7 @@
         "papaparse": "^5.3.1",
         "pkg-dir": "^5.0.0",
         "pug": "^3.0.2",
-        "puppeteer": "^13.1.2",
+        "puppeteer": "^13.1.3",
         "redis": "^3.1.2",
         "request": "^2.88.2",
         "request-filtering-agent": "^1.0.7",
@@ -86,7 +86,7 @@
         "@baladins/grunt-nodemon": "^0.4.6",
         "@types/db.js": "^0.14.7",
         "@types/express": "^4.17.13",
-        "@types/sinon": "^10.0.9",
+        "@types/sinon": "^10.0.10",
         "abortcontroller-polyfill": "^1.7.3",
         "bootstrap-datepicker": "1.9.0",
         "chai": "^4.3.6",
@@ -107,7 +107,7 @@
         "istanbul-reporter-shield-badge": "^1.2.1",
         "jsdoc": "^3.6.10",
         "jsdoc-ts-utils": "^2.0.1",
-        "karma": "^6.3.12",
+        "karma": "^6.3.14",
         "karma-chrome-launcher": "^3.1.0",
         "karma-coverage": "^2.1.0",
         "karma-esbuild": "^2.2.0",
@@ -117,7 +117,7 @@
         "karma-safari-launcher": "^1.0.0",
         "karma-sinon-chai": "^2.0.2",
         "mocha": "^9.2.0",
-        "nock": "^13.2.2",
+        "nock": "^13.2.4",
         "node-sass": "^7.0.1",
         "nyc": "^15.1.0",
         "rimraf": "^3.0.2",
