Temporarily set excludeNonRelevant default to true

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -110,5 +110,5 @@
     "validate page": true,
     "payload limit": "100kb",
     "text field character limit": 2000,
-    "excludeNonRelevant": false
+    "excludeNonRelevant": true
 }
