Add default security header values Document security header config

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -114,5 +114,10 @@
         "seconds": 0,
         "preload": false,
         "include subdomains": false
+    },
+    "csp": {
+        "enabled": false,
+        "report only": false,
+        "value": null
     }
 }
