Move secuirty header building outside of middleware Add options for x frame options and x content type options

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -110,6 +110,8 @@
     "validate page": true,
     "payload limit": "100kb",
     "text field character limit": 2000,
+    "frameguard deny": false,
+    "no sniff": false,
     "hsts": {
         "seconds": 0,
         "preload": false,
