--- a/config/default-config.json
+++ b/config/default-config.json
@@ -109,5 +109,17 @@
     "validate continuously": false,
     "validate page": true,
     "payload limit": "100kb",
-    "text field character limit": 2000
+    "text field character limit": 2000,
+    "frameguard deny": false,
+    "no sniff": false,
+    "hsts": {
+        "seconds": 0,
+        "preload": false,
+        "include subdomains": false
+    },
+    "csp": {
+        "enabled": false,
+        "report only": false,
+        "value": null
+    }
 }
