--- a/config/default-config.json
+++ b/config/default-config.json
@@ -1,6 +1,7 @@
 {
     "app name": "Enketo Smart Paper for KoBoCAT",
     "port": "8005",
+    "max processes": 16,
     "offline enabled": true,
     "id length": 8,
     "linked form and data server": {
