Prepare to release 4.0.0

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -123,5 +123,6 @@
         "enabled": false,
         "report only": false,
         "value": null
-    }
+    },
+    "exclude non-relevant": false
 }
