Add computeAsync to client config
This is slightly different from the query parameter flag in enketo-core, where app.js always expects an `?xform=` parameter, whereas enketo-express and central may load a form with no query parameter at all.

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -124,5 +124,8 @@
         "report only": false,
         "value": null
     },
-    "exclude non-relevant": false
+    "exclude non-relevant": false,
+    "experimental optimizations": {
+        "computeAsync": false
+    }
 }
