Hopefully fix generating .tag.txt in CI

--- a/.github/workflows/ghrc.yml
+++ b/.github/workflows/ghrc.yml
@@ -20,7 +20,7 @@ jobs:
               uses: actions/checkout@v2
 
             - name: Store version information
-              run: git describe --tags || git rev-parse --short HEAD > .tag.txt
+              run: git describe --tags > .tag.txt || git rev-parse --short HEAD > .tag.txt
 
             # Login against a Docker registry
             # https://github.com/docker/login-action
