Support GeoJSON secondary instances
Closes enketo/enketo-core#868

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
         "node": false
     },
     "globals": {
-        "Promise": true
+        "Promise": true,
+        "structuredClone": true
     },
     "extends": ["airbnb", "prettier"],
     "plugins": ["chai-friendly", "jsdoc", "prettier", "unicorn"],
