--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "@baladins/grunt-nodemon": "^0.4.6",
         "@types/db.js": "^0.14.7",
         "@types/express": "^4.17.13",
+        "@types/geojson": "^7946.0.8",
         "@types/sinon": "^10.0.11",
         "abortcontroller-polyfill": "^1.7.3",
         "bootstrap-datepicker": "1.9.0",
