--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -14,7 +14,7 @@ jobs:
             - uses: actions/checkout@v2
             - uses: mr-smithers-excellent/docker-build-push@v2
               with:
-                  image: enketo/enketo-express
+                  image: onaio/enketo-express
                   registry: docker.io
                   dockerfile: Dockerfile
                   username: ${{ secrets.DOCKER_HUB_USERNAME }}
