Add workflow dispacth
Signed-off-by: Kipchirchir Sigei <arapgodsmack@gmail.com>

--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -6,6 +6,12 @@ on:
         # usually releases
         tags:
             - '*'
+    workflow_dispatch:
+      inputs:
+          versionTag:
+              description: "Version Tag"
+              required: true
+              default: ''
 
 jobs:
     docker-build-push:
