--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
+        env:
+            TEST_REDIS_MAIN_PORT: 6379
+            TEST_REDIS_CACHE_PORT: 6380
         strategy:
             matrix:
                 node: ['14', '16']
@@ -22,7 +25,7 @@ jobs:
                     --health-timeout 5s
                     --health-retries 5
                 ports:
-                    - '6379:6379'
+                    - '${{env.TEST_REDIS_MAIN_PORT}}:6379'
             redis-6380:
                 image: redis
                 options: >-
@@ -31,7 +34,7 @@ jobs:
                     --health-timeout 5s
                     --health-retries 5
                 ports:
-                    - '6380:6379'
+                    - '${{env.TEST_REDIS_CACHE_PORT}}:6379'
         steps:
             - uses: actions/checkout@v2
             - uses: actions/cache@v2
