--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "5.0.2",
+    "version": "6.0.0",
     "main": "./app.js",
     "engines": {
         "node": ">=14.8.0 <17",
@@ -45,8 +45,8 @@
         "csurf": "^1.11.0",
         "db.js": "^0.15.0",
         "debug": "^4.3.4",
-        "enketo-core": "^6.1.7",
-        "enketo-transformer": "2.1.7",
+        "enketo-core": "7.0.0",
+        "enketo-transformer": "2.2.1",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.18.2",
         "express-cls-hooked": "^0.3.8",
@@ -83,7 +83,7 @@
         "@babel/eslint-parser": "^7.19.1",
         "@baladins/grunt-nodemon": "^0.4.6",
         "@types/db.js": "^0.14.7",
-        "@types/express": "^4.17.16",
+        "@types/express": "^4.17.17",
         "@types/geojson": "^7946.0.10",
         "@types/redis": "^2.8.32",
         "@types/sinon": "^10.0.13",
@@ -133,7 +133,7 @@
         "nock": "^13.3.0",
         "node-sass": "^7.0.3",
         "nyc": "^15.1.0",
-        "prettier": "^2.8.3",
+        "prettier": "^2.8.4",
         "rimraf": "^3.0.2",
         "sinon": "^11.1.2",
         "sinon-chai": "^3.7.0",
