Fix: revert jQuery upgrade
This change introduced regressions causing `TypeError`s when accessing jQuery extensions in Enketo Express

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "csurf": "^1.11.0",
         "db.js": "^0.15.0",
         "debug": "^4.3.4",
-        "enketo-core": "7.2.0",
+        "enketo-core": "7.2.1",
         "enketo-transformer": "2.3.0",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.18.2",
@@ -55,7 +55,7 @@
         "i18next-fs-backend": "^1.2.0",
         "i18next-http-backend": "^1.4.5",
         "i18next-http-middleware": "^3.3.0",
-        "jquery": "^3.6.4",
+        "jquery": "3.6.3",
         "jstransformer-markdown-it": "^3.0.0",
         "jszip": "^3.10.1",
         "jwt-simple": "^0.5.6",
