Use client-side transform for preview-by-URL

--- a/package.json
+++ b/package.json
@@ -87,15 +87,17 @@
         "@types/geojson": "^7946.0.10",
         "@types/redis": "^2.8.32",
         "@types/sinon": "^10.0.13",
+        "@typescript-eslint/eslint-plugin": "^5.56.0",
+        "@typescript-eslint/parser": "^5.56.0",
         "abortcontroller-polyfill": "^1.7.5",
         "bootstrap-datepicker": "1.9.0",
         "chai": "^4.3.7",
         "chai-as-promised": "^7.1.1",
         "docdash": "^1.2.0",
-        "esbuild": "^0.12.29",
-        "esbuild-plugin-alias": "^0.1.2",
+        "esbuild": "^0.16.17",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.8.0",
+        "eslint-import-resolver-typescript": "^3.5.3",
         "eslint-plugin-chai-friendly": "^0.7.2",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-jsdoc": "^36.1.1",
@@ -137,7 +139,8 @@
         "rimraf": "^3.0.2",
         "sinon": "^11.1.2",
         "sinon-chai": "^3.7.0",
-        "supertest": "^6.3.3"
+        "supertest": "^6.3.3",
+        "typescript": "^5.0.2"
     },
     "browser": {
         "enketo/config": "./public/js/src/module/client-config",
