--- a/config/default-config.json
+++ b/config/default-config.json
@@ -74,6 +74,10 @@
         },
         "api key": ""
     },
+    "geocoder": {
+        "provider": "google",
+        "api key": ""
+    },
     "piwik": {
         "analytics": {
             "tracker url": "",
@@ -86,7 +90,9 @@
     "maps": [
         {
             "name": "streets",
-            "tiles": ["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"],
+            "tiles": [
+                "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
+            ],
             "attribution": "© <a href=\"http://openstreetmap.org\">OpenStreetMap</a> | <a href=\"www.openstreetmap.org/copyright\">Terms</a>"
         }
     ],
