--- a/config/default-config.json
+++ b/config/default-config.json
@@ -86,7 +86,9 @@
     "maps": [
         {
             "name": "streets",
-            "tiles": ["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"],
+            "tiles": [
+                "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
+            ],
             "attribution": "© <a href=\"http://openstreetmap.org\">OpenStreetMap</a> | <a href=\"www.openstreetmap.org/copyright\">Terms</a>"
         }
     ],
@@ -95,12 +97,16 @@
         "main": {
             "host": "127.0.0.1",
             "port": "6379",
-            "password": null
+            "password": null,
+            "tls": null,
+            "prefix": null
         },
         "cache": {
             "host": "127.0.0.1",
             "port": "6380",
-            "password": null
+            "password": null,
+            "tls": null,
+            "prefix": null
         }
     },
     "logo": {
