--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "6.1.0",
+    "version": "6.2.0",
     "main": "./app.js",
     "engines": {
         "node": ">=14.8.0 <17",
@@ -45,7 +45,7 @@
         "csurf": "^1.11.0",
         "db.js": "^0.15.0",
         "debug": "^4.3.4",
-        "enketo-core": "git+https://github.com/enketo/enketo-core.git#425eabd",
+        "enketo-core": "^7.2.4",
         "enketo-transformer": "2.3.0",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.18.2",
@@ -54,7 +54,7 @@
         "i18next-browser-languagedetector": "^6.1.8",
         "i18next-fs-backend": "^1.2.0",
         "i18next-http-backend": "^1.4.5",
-        "i18next-http-middleware": "^3.3.0",
+        "i18next-http-middleware": "^3.3.2",
         "jquery": "3.6.3",
         "jstransformer-markdown-it": "^3.0.0",
         "jszip": "^3.10.1",
@@ -79,16 +79,16 @@
         "xml2js": "^0.5.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.21.8",
-        "@babel/eslint-parser": "^7.21.8",
+        "@babel/core": "^7.22.5",
+        "@babel/eslint-parser": "^7.22.5",
         "@baladins/grunt-nodemon": "^0.4.6",
         "@types/db.js": "^0.14.7",
         "@types/express": "^4.17.17",
         "@types/geojson": "^7946.0.10",
         "@types/redis": "^2.8.32",
-        "@types/sinon": "^10.0.14",
-        "@typescript-eslint/eslint-plugin": "^5.56.0",
-        "@typescript-eslint/parser": "^5.56.0",
+        "@types/sinon": "^10.0.15",
+        "@typescript-eslint/eslint-plugin": "^5.61.0",
+        "@typescript-eslint/parser": "^5.61.0",
         "abortcontroller-polyfill": "^1.7.5",
         "bootstrap-datepicker": "1.9.0",
         "chai": "^4.3.7",
@@ -97,7 +97,7 @@
         "esbuild": "^0.16.17",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.8.0",
-        "eslint-import-resolver-typescript": "^3.5.3",
+        "eslint-import-resolver-typescript": "^3.5.5",
         "eslint-plugin-chai-friendly": "^0.7.2",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-jsdoc": "^36.1.1",
@@ -123,7 +123,7 @@
         "jsdoc-ts-utils": "^2.0.1",
         "karma": "^6.4.2",
         "karma-chrome-launcher": "^3.2.0",
-        "karma-coverage": "^2.2.0",
+        "karma-coverage": "^2.2.1",
         "karma-esbuild": "^2.2.5",
         "karma-firefox-launcher": "^2.1.2",
         "karma-mocha": "^2.0.1",
@@ -140,7 +140,7 @@
         "sinon": "^11.1.2",
         "sinon-chai": "^3.7.0",
         "supertest": "^6.3.3",
-        "typescript": "^5.0.2"
+        "typescript": "^5.1.6"
     },
     "browser": {
         "enketo/config": "./public/js/src/module/client-config",
