--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "6.2.0",
+    "version": "6.2.1",
     "main": "./app.js",
     "engines": {
         "node": ">=14.8.0 <17",
@@ -45,8 +45,8 @@
         "csurf": "^1.11.0",
         "db.js": "^0.15.0",
         "debug": "^4.3.4",
-        "enketo-core": "^7.2.4",
-        "enketo-transformer": "2.3.0",
+        "enketo-core": "^7.2.5",
+        "enketo-transformer": "3.0.1",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.18.2",
         "express-cls-hooked": "^0.3.8",
@@ -59,6 +59,7 @@
         "jstransformer-markdown-it": "^3.0.0",
         "jszip": "^3.10.1",
         "jwt-simple": "^0.5.6",
+        "libxslt": "0.10.2",
         "load-grunt-tasks": "^5.1.0",
         "lodash": "^4.17.21",
         "morgan": "^1.10.0",
@@ -79,16 +80,16 @@
         "xml2js": "^0.5.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.22.5",
-        "@babel/eslint-parser": "^7.22.5",
+        "@babel/core": "^7.22.10",
+        "@babel/eslint-parser": "^7.22.10",
         "@baladins/grunt-nodemon": "^0.4.6",
         "@types/db.js": "^0.14.7",
         "@types/express": "^4.17.17",
         "@types/geojson": "^7946.0.10",
         "@types/redis": "^2.8.32",
-        "@types/sinon": "^10.0.15",
-        "@typescript-eslint/eslint-plugin": "^5.61.0",
-        "@typescript-eslint/parser": "^5.61.0",
+        "@types/sinon": "^10.0.16",
+        "@typescript-eslint/eslint-plugin": "^5.62.0",
+        "@typescript-eslint/parser": "^5.62.0",
         "abortcontroller-polyfill": "^1.7.5",
         "bootstrap-datepicker": "1.9.0",
         "chai": "^4.3.7",
@@ -96,14 +97,14 @@
         "docdash": "^1.2.0",
         "esbuild": "^0.16.17",
         "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-import-resolver-typescript": "^3.5.5",
+        "eslint-config-prettier": "^8.10.0",
+        "eslint-import-resolver-typescript": "^3.6.0",
         "eslint-plugin-chai-friendly": "^0.7.2",
-        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-import": "^2.28.1",
         "eslint-plugin-jsdoc": "^36.1.1",
         "eslint-plugin-jsx-a11y": "^6.7.1",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-unicorn": "^36.0.0",
         "grunt": "^1.6.1",
@@ -117,7 +118,7 @@
         "grunt-sass": "^3.1.0",
         "grunt-shell-spawn": "^0.4.0",
         "istanbul": "^0.4.5",
-        "istanbul-lib-instrument": "^5.2.1",
+        "istanbul-lib-instrument": "^6.0.0",
         "istanbul-reporter-shield-badge": "^1.2.1",
         "jsdoc": "^3.6.11",
         "jsdoc-ts-utils": "^2.0.1",
@@ -132,7 +133,7 @@
         "karma-sinon-chai": "^2.0.2",
         "markdown-eslint-parser": "^1.2.1",
         "mocha": "^9.2.2",
-        "nock": "^13.3.1",
+        "nock": "^13.3.3",
         "node-sass": "^7.0.3",
         "nyc": "^15.1.0",
         "prettier": "^2.8.8",
